# bitrounding-c

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_C.md  TODO.md  analyze_bit_precision.py  analyze_hdf_compression.py  analyze_netcdf_compression.py  bit_information.jl  bit_rounding.py  netcdf_bit_rounding.py  pyproject.toml  run_experiments.sh
.spack/: packages.yaml
examples/: sample_output.txt
src/: bit_pattern.c  bit_pattern.h  bitrounding_bitinfo.c  bitrounding_bitinfo.h  bitrounding_stats.c  bitrounding_stats.h  hdf_bit_analysis.c  hdf_concat.c  hdf_size_stat.c  netcdf_bit_analysis.c  netcdf_bit_rounding.c
